[gd_scene load_steps=27 format=2]

[ext_resource path="res://sprites/trainers/baabaa/baabaa_dodge_1.png" type="Texture" id=1]
[ext_resource path="res://sprites/trainers/baabaa/baabaa_idle_1.png" type="Texture" id=2]
[ext_resource path="res://sprites/trainers/baabaa/baabaa_onhit_1.png" type="Texture" id=3]
[ext_resource path="res://BaaBaa.gd" type="Script" id=4]
[ext_resource path="res://sprites/trainers/baabaa/baabaa_idle_2.png" type="Texture" id=5]
[ext_resource path="res://sprites/trainers/baabaa/baabaa_idle_0.png" type="Texture" id=6]
[ext_resource path="res://sprites/trainers/baabaa/baabaa_onhit_2.png" type="Texture" id=7]
[ext_resource path="res://HealthBar.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/npc/info_indicator_0.png" type="Texture" id=9]
[ext_resource path="res://ui/npc/info_indicator_6.png" type="Texture" id=10]
[ext_resource path="res://ui/npc/info_indicator_2.png" type="Texture" id=11]
[ext_resource path="res://ui/npc/info_indicator_3.png" type="Texture" id=12]
[ext_resource path="res://ui/npc/info_indicator_1.png" type="Texture" id=13]
[ext_resource path="res://ui/npc/info_indicator_4.png" type="Texture" id=14]
[ext_resource path="res://ui/npc/info_indicator_5.png" type="Texture" id=15]
[ext_resource path="res://ui/npc/info_bubble_complete_3.png" type="Texture" id=16]
[ext_resource path="res://ui/npc/info_bubble_complete_2.png" type="Texture" id=17]
[ext_resource path="res://ui/npc/info_bubble_complete_4.png" type="Texture" id=18]
[ext_resource path="res://ui/npc/info_bubble_complete_1.png" type="Texture" id=19]
[ext_resource path="res://ui/npc/info_bubble_complete_0.png" type="Texture" id=20]
[ext_resource path="res://ui/npc/info_bubble_complete_5.png" type="Texture" id=21]
[ext_resource path="res://ui/npc/info_bubble_complete_6.png" type="Texture" id=22]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 10 ) ],
"loop": true,
"name": "Info",
"speed": 8.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 19 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "Complete",
"speed": 8.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 2 ), ExtResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "Dodge",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 7 ) ],
"loop": false,
"name": "Hit",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.40539, 13.4787 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 40, 31.6564 )

[node name="BaaBaa" type="KinematicBody2D"]
collision_layer = 1024
collision_mask = 9
script = ExtResource( 4 )

[node name="Info_Bubble" type="AnimatedSprite" parent="."]
position = Vector2( 0, -24 )
frames = SubResource( 1 )
animation = "Complete"
playing = true

[node name="Baa_Anim" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
animation = "Idle"
frame = 1
playing = true

[node name="Baa_Hitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.577806, 2.35792 )
shape = SubResource( 3 )

[node name="HealthBar" parent="." instance=ExtResource( 8 )]
visible = false
margin_left = -15.1816
margin_top = -21.9594
margin_right = -15.1816
margin_bottom = -21.9594
rect_scale = Vector2( 0.5, 0.5 )

[node name="HealTimer" type="Timer" parent="."]

[node name="ActiveArea" type="Area2D" parent="."]

[node name="Active_Hitbox" type="CollisionShape2D" parent="ActiveArea"]
position = Vector2( 0, -15.1548 )
shape = SubResource( 4 )

[node name="DialogTimer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="animation_finished" from="Baa_Anim" to="." method="_on_Baa_Anim_animation_finished"]
[connection signal="timeout" from="HealTimer" to="." method="_on_HealTimer_timeout"]
[connection signal="body_entered" from="ActiveArea" to="." method="_on_ActiveArea_body_entered"]
[connection signal="body_exited" from="ActiveArea" to="." method="_on_ActiveArea_body_exited"]
[connection signal="timeout" from="DialogTimer" to="." method="_on_DialogTimer_timeout"]
